--- a/split-stay-backend/package.json
+++ b/split-stay-backend/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
     "express-openid-connect": "^2.17.1",
     "express-session": "^1.18.0",
     "firebase": "^10.11.1",
